--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
+    "vite-plugin-glsl": "^1.3.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
