--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "three": "^0.160.0"
   },
   "devDependencies": {
+    "@netlify/vite-plugin-react-router": "^1.0.0",
     "@react-router/dev": "^7.1.1",
     "@types/node": "^20",
     "@types/react": "^18.2.0",
