--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "vite": "^5.4.11",
     "vite-plugin-glsl": "^1.3.1",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.0"
   }
 }
